--- a/WebContent/WEB-INF/zul/crawler/web/index.zul
+++ b/WebContent/WEB-INF/zul/crawler/web/index.zul
@@ -20,6 +20,7 @@
 		<tabs>
 			<tab id="tabCrawlerWebPattern" label="Pattern list"
 				selected="true" />
+			<tab id="tabCrawlerWebExclusion" label="Exclusion list" />
 			<tab id="tabCrawlerWebUrl" label="Url browser" />
 			<tab id="tabCrawlerWebCrawl" label="Crawl process" />
 			<tab id="tabCrawlerWebMapping" label="Field mapping"
@@ -29,6 +30,9 @@
 		<tabpanels>
 			<tabpanel>
 				<include src="WEB-INF/zul/crawler/web/pattern.zul" />
+			</tabpanel>
+			<tabpanel fulfill="tabCrawlerWebExclusion.onSelect">
+				<include src="WEB-INF/zul/crawler/web/exclusion.zul" />
 			</tabpanel>
 			<tabpanel fulfill="tabCrawlerWebUrl.onSelect">
 				<include src="WEB-INF/zul/crawler/web/url.zul" />
