--- a/WebContent/WEB-INF/zul/crawler/web/index.zul
+++ b/WebContent/WEB-INF/zul/crawler/web/index.zul
@@ -21,6 +21,7 @@
 			<tab id="tabCrawlerWebPattern" label="Pattern list"
 				selected="true" />
 			<tab id="tabCrawlerWebExclusion" label="Exclusion list" />
+			<tab id="tabCrawlerWebUrlFilter" label="Url filter" />
 			<tab id="tabCrawlerWebUrl" label="Url browser" />
 			<tab id="tabCrawlerWebCrawl" label="Crawl process" />
 			<tab id="tabCrawlerWebMapping" label="Field mapping"
@@ -33,6 +34,9 @@
 			</tabpanel>
 			<tabpanel fulfill="tabCrawlerWebExclusion.onSelect">
 				<include src="WEB-INF/zul/crawler/web/exclusion.zul" />
+			</tabpanel>
+			<tabpanel fulfill="tabCrawlerWebUrlFilter.onSelect">
+				<include src="WEB-INF/zul/crawler/web/urlFilter.zul" />
 			</tabpanel>
 			<tabpanel fulfill="tabCrawlerWebUrl.onSelect">
 				<include src="WEB-INF/zul/crawler/web/url.zul" />
