Work in progress 1. Bug with delete by query 2. Replication

--- a/WebContent/WEB-INF/zul/crawler/database/process.zul
+++ b/WebContent/WEB-INF/zul/crawler/database/process.zul
@@ -22,7 +22,7 @@
 				visible="@{dbCrawlProc.admin}" checked="@{dbCrawlProc.debug}" />
 		</toolbar>
 		<panelchildren>
-			<listbox model="@{dbCrawlProc.crawlMaster.crawlThreads}"
+			<listbox model="@{dbCrawlProc.crawlMaster.threads}"
 				mold="paging" pageSize="20">
 				<listhead sizable="true">
 					<listheader label="Name" />
