--- a/WebContent/WEB-INF/zul/replication/index.zul
+++ b/WebContent/WEB-INF/zul/replication/index.zul
@@ -81,12 +81,22 @@
 				<listhead>
 					<listheader label="Instance URL" />
 					<listheader label="Index Name" />
-					<listheader />
+					<listheader label="Last execution time"
+						width="150px" />
+					<listheader label="Status" width="100px" />
+					<listheader label="Info" width="150px" />
+					<listheader label="Action" width="100px"
+						align="center" />
 				</listhead>
 				<listitem self="@{each='item'}">
 					<listcell label="@{item.instanceUrl}" />
 					<listcell label="@{item.indexName}" />
-					<listcell><button label="Start replication" /></listcell>
+					<listcell />
+					<listcell />
+					<listcell />
+					<listcell>
+						<button label="Start replication" />
+					</listcell>
 				</listitem>
 			</listbox>
 		</panelchildren>
