--- a/WebContent/WEB-INF/zul/delete/index.zul
+++ b/WebContent/WEB-INF/zul/delete/index.zul
@@ -16,49 +16,56 @@
 -->
 <window id="delete"
 	use="com.jaeksoft.searchlib.web.controller.delete.DeleteController">
-
-	<grid>
-		<columns>
-			<column width="100px" align="right" />
-			<column align="left" />
-		</columns>
-		<rows>
-			<row>
-				<label>Enter the query:</label>
-				<textbox height="50px" multiline="true"
-					forward="onChange=onQueryChange"
-					value="@{delete.request.queryString}" width="90%" />
-			</row>
-			<row>
-				<label>Default operator:</label>
-				<listbox mold="select"
-					selectedItem="@{delete.request.defaultOperator}">
-					<listitem label="AND" value="AND" />
-					<listitem label="OR" value="OR" />
-				</listbox>
-			</row>
-			<row>
-				<label>Language:</label>
-				<listbox mold="select"
-					selectedItem="@{delete.request.lang}"
-					model="@{delete.languageEnum}">
-					<listitem self="@{each=langEnum}"
-						label="@{langEnum.name}" value="@{langEnum}" />
-				</listbox>
-			</row>
-		</rows>
-		<foot width="100%">
-			<footer span="2">
-				<button label="Check" forward="onCheck" />
-				<space width="50px" />
-				<button label="Delete" forward="onDelete"
-					disabled="@{delete.notChecked}" />
-				<space width="50px" />
-				<button label="XML/HTTP API call" target="_blank"
-					disabled="@{delete.notChecked}" href="@{delete.requestApiCall}" />
-				<space width="50px" />
-			</footer>
-		</foot>
-	</grid>
-
+	<panel title="Delete document(s) by query" border="normal">
+		<panelchildren>
+			<grid>
+				<columns>
+					<column width="100px" align="right" />
+					<column align="left" />
+				</columns>
+				<rows>
+					<row>
+						<label>Enter the query:</label>
+						<textbox height="50px" multiline="true"
+							forward="onChange=onQueryChange"
+							value="@{delete.request.queryString}" width="90%" />
+					</row>
+					<row>
+						<label>Default operator:</label>
+						<listbox mold="select"
+							selectedItem="@{delete.request.defaultOperator}">
+							<listitem label="AND" value="AND" />
+							<listitem label="OR" value="OR" />
+						</listbox>
+					</row>
+					<row>
+						<label>Language:</label>
+						<listbox mold="select"
+							selectedItem="@{delete.request.lang}"
+							model="@{delete.languageEnum}">
+							<listitem self="@{each=langEnum}"
+								label="@{langEnum.name}" value="@{langEnum}" />
+						</listbox>
+					</row>
+				</rows>
+				<foot>
+					<footer span="2">
+						<vbox width="100%" align="center">
+							<hbox>
+								<button label="Check" forward="onCheck" />
+								<space width="50px" />
+								<button label="Delete"
+									forward="onDelete" disabled="@{delete.notChecked}" />
+								<space width="50px" />
+								<button label="XML/HTTP API call"
+									target="_blank" disabled="@{delete.notChecked}"
+									href="@{delete.requestApiCall}" />
+								<space width="50px" />
+							</hbox>
+						</vbox>
+					</footer>
+				</foot>
+			</grid>
+		</panelchildren>
+	</panel>
 </window>
