--- a/WebContent/WEB-INF/zul/replication/index.zul
+++ b/WebContent/WEB-INF/zul/replication/index.zul
@@ -83,7 +83,10 @@
 					<listheader label="Index Name" />
 					<listheader label="Last execution time"
 						width="150px" />
-					<listheader label="Status" width="100px" />
+					<listheader label="Duration"
+						tooltiptext="last duration time" width="100px" />
+					<listheader label="Progression" width="200px"
+						align="center" />
 					<listheader label="Info" width="150px" />
 					<listheader label="Action" width="100px"
 						align="center" />
@@ -91,14 +94,29 @@
 				<listitem self="@{each='item'}">
 					<listcell label="@{item.instanceUrl}" />
 					<listcell label="@{item.indexName}" />
-					<listcell />
-					<listcell />
-					<listcell />
+					<listcell
+						label="@{item.lastReplicationThread.startTime,converter='com.jaeksoft.searchlib.web.converter.DateConverter'}" />
+					<listcell
+						label="@{item.lastReplicationThread.duration,converter='com.jaeksoft.searchlib.web.converter.DurationConverter'}" />
 					<listcell>
-						<button label="Start replication" />
+						<progressmeter width="95%"
+							value="@{item.lastReplicationThread.progress}" />
+					</listcell>
+					<listcell
+						label="@{item.lastReplicationThread.info}" />
+					<listcell>
+						<button tooltiptext="Start the replication"
+							disabled="@{item.replicationThread}"
+							image="/images/action_check.png"
+							onClick="replication.execute(self)">
+							<custom-attributes
+								replicationitem="@{item}" />
+						</button>
 					</listcell>
 				</listitem>
 			</listbox>
 		</panelchildren>
 	</panel>
+	<timer delay="5000" repeats="true" onTimer="replication.onTimer()"
+		running="@{replication.refresh}" />
 </window>
